--- a/bgx/web_app_node/static/index.html
+++ b/bgx/web_app_node/static/index.html
@@ -25,6 +25,9 @@
         <div class="col-lg-12 text-center">
           <h1 class="mt-5">BGX Test Txs</h1>
           <p class="lead">We have three addresses to transfer BGT tokens</p>
+          <button class="btn btn-primary" id="refresh" style="margin-bottom: 10px;">
+            <span class="glyphicon glyphicon-refresh"></span>
+          </button>
           <ul class="list-unstyled" id="addresses"></ul>
           <div class="form-group">
             <label for="from">From:</label>
