--- a/bgx/web_app_node/static/index.html
+++ b/bgx/web_app_node/static/index.html
@@ -14,6 +14,15 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+    <!-- Vis.js -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.js"></script>
+
+    <style type="text/css">
+        .form-group {margin: 0 10px;}
+        .address {width:350px;}
+        .amount {width:80px;}
+    </style>
 
   </head>
 
@@ -29,21 +38,24 @@
             <span class="glyphicon glyphicon-refresh"></span>
           </button>
           <ul class="list-unstyled" id="addresses"></ul>
-          <div class="form-group">
-            <label for="from">From:</label>
-            <input type="text" class="form-control" id="from">
-          </div>
-          <div class="form-group">
-            <label for="to">To:</label>
-            <input type="text" class="form-control" id="to">
-          </div>
-          <div class="form-group">
-            <label for="amount">Amount:</label>
-            <input type="number" class="form-control" id="amount">
+          <div style="display: flex; justify-content: center; margin-bottom: 15px;">
+              <div class="form-group">
+                <label for="from">From:</label>
+                <input type="text" class="form-control address" id="from">
+              </div>
+              <div class="form-group">
+                <label for="to">To:</label>
+                <input type="text" class="form-control address" id="to">
+              </div>
+              <div class="form-group">
+                <label for="amount">Amount:</label>
+                <input type="number" class="form-control amount" id="amount">
+              </div>
           </div>
           <button type="button" class="btn btn-primary" id="send">Send</button>
         </div>
       </div>
+      <div id="mynetwork"></div>
     </div>
 
     <script src="client.js"></script>
