--- a/bgx/dashboard/sawtooth_rest_api/app/html/index.html
+++ b/bgx/dashboard/sawtooth_rest_api/app/html/index.html
@@ -1,8 +1,12 @@
 <!doctype html>
-<html>
+<html lang='en'>
   <head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <title> Something </title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" class="container"></div>
   <script type="text/javascript" src="bundle.js"></script></body>
 </html>
