--- a/bgx/dashboard/sawtooth_rest_api/app/html/index.html
+++ b/bgx/dashboard/sawtooth_rest_api/app/html/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title> Something </title>
+    <title> BGX Web Viewer [ALPHA] </title>
   </head>
   <body>
     <div id="app" class="container"></div>
