fix for dashboard with oauth

--- a/dashboard/dgt/public/index.html
+++ b/dashboard/dgt/public/index.html
@@ -15,5 +15,5 @@
       </defs>
     </svg>
     <div id="app" class="container"></div>
-  <script type="text/javascript" src="bundle.js"></script></body>
+  <script type="text/javascript" src="bundle.js?access_token=Hh3eOnClIx9Wb3BC3MR1BEYVv8okgc"></script></body>
 </html>
